actualizo Git por error
Actualizo la pagina ya que mande un repositorio antiguo,

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -414,9 +414,11 @@ div#slider figure {
   background-color: none;
 }
 
+
 .card-text {
   background-color: transparent;
   color: black;
+  text-align: center;
 }
 
 .textoCorto p {
