--- a/views/historia.html
+++ b/views/historia.html
@@ -49,14 +49,14 @@
     <div id="slide1" class="slide">
       <div class="title">
         <h1>Inicio</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+        <p>La idea surge ante la necesidad de comer una buena hamburguesa de estilo yankee, sin tener que viajar a USA o Buenos Aires. Al principio se pensó en abrir algo solo para amigos cercanos, algo familiar.</p>
       </div>
     </div>
     
     <div id="slide2" class="slide">
       <div class="title">
         <h1>Actualidad</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+        <p>Actualmente nos encontramos en el proceso de transición, con ganas de poder llegar a mas gente, abriendo un local comercial centrico al alcance de mas personas</p>
       </div>
       <img class="quirrelA" src="../ImgB/six.png">
       
@@ -65,7 +65,7 @@
     <div id="slide3" class="slide slide3">
       <div class="title">
         <h1>Futuro</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+        <p>Como objetivo y como sueño queremos llegar a mas mesas y a mas hogares del suelo cordobes y argentino</p>
       </div>
     </div>
     
