--- a/views/exploracion.html
+++ b/views/exploracion.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../estilos.css/styles.css">
     <title>Contacto</title>
   </head>
-    <body >    
+    <body class="bodynosotros" >    
       <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top navClass">
           <div class="container-fluid navClass">
@@ -54,33 +54,27 @@
       
       <form>
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-">
             <label for="inputEmail4">Email</label>
             <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
           </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-">
             <label for="inputPassword4">Nombre</label>
             <input type="text" class="form-control" id="" placeholder="Nombre">
           </div>
         </div>
-        <div class="form-group">
-          <label for="inputAddress">Address</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-        </div>
-        <div class="form-group">
-          <label for="inputAddress2">Address 2</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-        </div>
+        
+      
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
+          <div class="form-group col-md-">
+            <label for="inputCity">Barrio</label>
             <input type="text" class="form-control" id="inputCity">
           </div>
-          <div class="form-group col-md-4">
-            <label for="inputState">State</label>
+          <div class="form-group col-md-">
+            <label for="inputState">Provincia</label>
             <select id="inputState" class="form-control">
-              <option selected>Choose...</option>
-              <option>...</option>
+              <option selected>Córdoba</option>
+              <option>Buenos Aires</option>
             </select>
           </div>
           <div class="form-group col-md-2">
@@ -89,12 +83,8 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              Check me out
-            </label>
-          </div>
+
+        
         </div>
         <button type="submit" class="btn btn-dark">Enviar</button>
       </form>
