--- a/views/menu.html
+++ b/views/menu.html
@@ -69,16 +69,17 @@
       </div>
     </section>
     
-    <div class="album py-5 bg-light imagenDeFondo">
+    <div class="album py-0 imagenDeFondo">
       <div class="container">
   
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../ImgB/burga 1.jpg" alt="">
+            <img src="../ImgB/burga 1.jpg" alt="">
   
               <div class="card-body">
-                <p class="card-text">Classic Burguer .</p>
+                <p class="card-text">Classic <br> Burger</p>
+                
                 <div class="d-flex justify-content-between align-items-center">
                   
                   <small class="text-muted"></small>
@@ -88,9 +89,9 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-             <img src="../ImgB/burga 2.jpg" alt="">  
+             <img src ="../ImgB/burga 2.jpg" alt="">  
               <div class="card-body">
-                <p class="card-text">Thousand Burger.</p>
+                <p class="card-text">Thousand Burger</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                   <small class="text-muted"></small>
@@ -100,9 +101,9 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../ImgB/burga 3.jpg" alt="">  
+               <img src="../ImgB/burga 3.jpg" alt="">  
               <div class="card-body">
-                <p class="card-text">Cheese Burger</p>
+                <p class="card-text">Cheese <br> Burger</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                   <small class="text-muted"></small>
@@ -111,17 +112,7 @@
             </div>
           </div>
   
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="../ImgB/burga 4.jpg" alt="">  
-              <div class="card-body">
-                <p class="card-text">Combo Familia</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted"></small>
-                </div>
-              </div>
-            </div>
-          </div>  
+          
           </div>
   
       </div>
