--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -49,7 +49,10 @@
             <p>Vivimos, Comemos, Disfrutamos <br> BURGERS</p>            
           </div>
           <div class="image">
+            <br>
+
             <img class="nosotrosPng" src="../ImgB/My project-1.png">
+            <br>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -70,12 +73,18 @@
     
         <hr class="featurette-divider">
 
-        
+        <main>
+
           <div class="col-md-5 order-md-1">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/nq9WnmCGoFQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+          
+          <div class="col-md-5 order-md-1">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/U0dW24WEgvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
-
+      </main>
+        
         <hr class="featurette-divider">
     
         <!-- /END THE FEATURETTES -->
